tooling/nargo_cli/tests/snapshots/execution_success/nested_if_then_block_same_cond/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      },
      {
        "name": "b",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "array",
            "length": 2,
            "type": {
              "kind": "boolean"
            }
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 2,
        "type": {
          "kind": "boolean"
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _8",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6]",
    "public parameters indices : []",
    "return value indices : [_7, _8]",
    "BLACKBOX::RANGE [(_0, 1)] []",
    "BLACKBOX::RANGE [(_1, 1)] []",
    "BLACKBOX::RANGE [(_2, 1)] []",
    "BLACKBOX::RANGE [(_3, 1)] []",
    "BLACKBOX::RANGE [(_4, 1)] []",
    "BLACKBOX::RANGE [(_5, 1)] []",
    "BLACKBOX::RANGE [(_6, 1)] []",
    "EXPR [ (-1, _1) (1, _7) 0 ]",
    "EXPR [ (-1, _2) (1, _8) 0 ]"
  ],
  "debug_symbols": "dY/RCoMwDEX/Jc990IeB81fGkFijFEJbYisM8d8XxW4y2FN6c3ou7QoD9XnqnB/DDO1jhV4cs5s6DhaTC16362agxC4Jka7gwtWKKOQTtD4zG1iQ83FpjuiPmVCUVgbIDzq1cHRM+2kzX7v6r9ZNc8p1c//oN/WfmtA6+X3xguKwZzrjmL290PSKhZQfRwmWhiy0Nx1Mu98=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
